email verify backend

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
 PORT=5000
 MONGO_URI=mongodb+srv://funnydev94625:starc0911@cluster0.kpjac1a.mongodb.net/doc_gen
 JWT_SECRET=docgenerateplatform
+SMTP_USER=funnydev94625@gmail.com
+SMTP_PASS=starc0911
+FRONTEND_URL=http://localhost:3000
