--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.3",
     "puppeteer": "^22.5.0",
+    "uuid": "^11.1.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
