--- a/server/.env
+++ b/server/.env
@@ -2,5 +2,5 @@ PORT=5000
 MONGO_URI=mongodb+srv://funnydev94625:starc0911@cluster0.kpjac1a.mongodb.net/doc_gen
 JWT_SECRET=docgenerateplatform
 SMTP_USER=Superluckyguy0112@gmail.com
-SMTP_PASS=Superstar2004!
+SMTP_PASS=nffombscfgbkvyro
 FRONTEND_URL=https://octobersecurity.vercel.app
