--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "docx-pdf": "^0.0.1",
+    "docx-templates": "^4.14.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "libreoffice-convert": "^1.6.1",
     "mammoth": "^1.9.1",
     "mongoose": "^8.14.3",
     "multer": "^1.4.5-lts.1",
