--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.9.1",
     "@hookform/resolvers": "^3.9.1",
     "@pdftron/webviewer": "^11.5.0",
     "@radix-ui/react-accordion": "1.2.2",
@@ -51,7 +52,9 @@
     "html-to-draftjs": "^1.5.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongodb": "^6.17.0",
     "next": "15.2.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
