--- a/server/package.json
+++ b/server/package.json
@@ -23,9 +23,12 @@
     "jsonwebtoken": "^9.0.2",
     "libreoffice-convert": "^1.6.1",
     "mammoth": "^1.9.1",
-    "mongoose": "^8.14.3",
+    "mongoose": "^8.15.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.3",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "puppeteer": "^22.5.0",
     "uuid": "^11.1.0",
     "validator": "^13.11.0"
